--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "@angular/platform-browser-dynamic": "5.0.0",
         "@ionic-native/core": "4.3.2",
         "@ionic-native/geolocation": "4.3.2",
-        "@ionic-native/google-maps": "^4.3.3",
+        "@ionic-native/google-maps": "^4.4.0",
         "@ionic-native/splash-screen": "4.3.2",
         "@ionic-native/status-bar": "4.3.2",
         "@ionic/storage": "2.1.3",
@@ -44,7 +44,8 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.1.0",
-        "typescript" : "2.4.2"
+        "ionic": "3.18.0",
+        "typescript": "2.4.2"
     },
     "description": "An Ionic project",
     "cordova": {
