--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "dependencies": {
         "@angular/common": "5.0.0",
         "@angular/compiler": "5.0.0",
-        "@angular/compiler-cli": "5.0.0",
         "@angular/core": "5.0.0",
         "@angular/forms": "5.0.0",
         "@angular/http": "5.0.0",
@@ -45,6 +44,7 @@
         "zone.js": "0.8.18"
     },
     "devDependencies": {
+        "@angular/compiler-cli": "^5.0.0",
         "@ionic/app-scripts": "3.1.0",
         "ionic": "3.18.0",
         "typescript": "2.4.2"
