--- a/package.json
+++ b/package.json
@@ -1,72 +1,50 @@
 {
     "name": "ion-maps",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "author": "Yann Braga",
-    "homepage": "http://yannbraga.com/",
-    "private": true,
+    "description": "An Ionic Maps component",
+    "main": "dist/index.js",
+    "typings": "dist/index.d.ts",
     "scripts": {
-        "clean": "ionic-app-scripts clean",
-        "build": "ionic-app-scripts build",
-        "lint": "ionic-app-scripts lint",
-        "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve",
-        "module:build": "rm -rf aot dist && ngc",
+        "build": "rm -rf aot dist && ngc",
         "shipit": "npm run build && npm publish"
     },
-    "dependencies": {
-        "@angular/common": "5.0.0",
-        "@angular/compiler": "5.0.0",
-        "@angular/core": "5.0.0",
-        "@angular/forms": "5.0.0",
-        "@angular/http": "5.0.0",
-        "@angular/platform-browser": "5.0.0",
-        "@angular/platform-browser-dynamic": "5.0.0",
-        "@ionic-native/core": "4.3.2",
-        "@ionic-native/geolocation": "4.3.2",
-        "@ionic-native/google-maps": "^4.4.0",
-        "@ionic-native/splash-screen": "4.3.2",
-        "@ionic-native/status-bar": "4.3.2",
-        "@ionic/storage": "2.1.3",
+    "repository": {
+      "type": "git",
+      "url": "git+https://github.com/yannbf/ion-maps.git"
+    },
+    "keywords": [
+      "ionic3",
+      "maps",
+      "ion-maps",
+      "ionic",
+      "angular2",
+      "angular5"
+    ],
+    "license": "MIT",
+    "bugs": {
+      "url": "https://github.com/yannbf/ion-maps.git/issues"
+    },
+    "homepage": "https://github.com/yannbf/ion-maps.git#readme",
+    "devDependencies": {
+        "@angular/common": "4.4.4",
+        "@angular/compiler": "4.4.4",
+        "@angular/core": "4.4.4",
+        "@angular/forms": "4.4.4",
+        "@angular/http": "4.4.4",
+        "@angular/platform-browser": "4.4.4",
+        "@angular/platform-browser-dynamic": "4.4.4",
+        "@angular/compiler-cli": "4.4.4",
+        "@ionic/app-scripts": "3.1.0",
         "@types/googlemaps": "^3.29.2",
-        "cordova-android": "^6.2.3",
-        "cordova-ios": "^4.4.0",
-        "cordova-plugin-device": "^1.1.4",
-        "cordova-plugin-googlemaps": "^1.4.5",
-        "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
-        "cordova-plugin-ionic-webview": "^1.1.16",
-        "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-whitelist": "^1.3.1",
+        "ionic": "3.18.0",
         "ionic-angular": "3.9.2",
-        "ionic-plugin-keyboard": "^2.2.1",
-        "ionicons": "3.0.0",
+        "typescript": "2.4.2",
         "rxjs": "5.5.2",
-        "sw-toolbox": "3.6.0",
         "zone.js": "0.8.18"
     },
-    "devDependencies": {
-        "@angular/compiler-cli": "^5.0.0",
-        "@ionic/app-scripts": "3.1.0",
-        "ionic": "3.18.0",
-        "typescript": "2.4.2"
-    },
-    "description": "An Ionic project",
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-device": {},
-            "cordova-plugin-googlemaps": {
-                "API_KEY_FOR_ANDROID": "AIzaSyBaTVlHDndpSgbdDnRsCy2xFJt2tB41NB0",
-                "API_KEY_FOR_IOS": "AIzaSyBaTVlHDndpSgbdDnRsCy2xFJt2tB41NB0",
-                "LOCATION_WHEN_IN_USE_DESCRIPTION": "Show your location on the map",
-                "LOCATION_ALWAYS_USAGE_DESCRIPTION": "Trace your location on the map"
-            },
-            "cordova-plugin-ionic-webview": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
-        },
-        "platforms": [
-            "android",
-            "ios"
-        ]
+    "peerDependencies": {
+      "@ionic-native/geolocation": "^4.0.0",
+      "@ionic-native/google-maps": "^4.0.0"
     }
 }
